--- a/Blockly/src/index.css
+++ b/Blockly/src/index.css
@@ -19,22 +19,58 @@ code {
   flex-basis: 100%;
   height: 100%;
   min-width: 600px;
+  order: 1;
 }
 
 #outputPane {
   display: flex;
   flex-direction: column;
   width: 400px;
+  height: 100%;
   flex: 0 0 400px;
   overflow: auto;
   margin: 1rem;
+  order: 2;
 }
 
 #generatedCode {
-  height: 50%;
   background-color: rgb(247, 240, 228);
+  order: 5;
 }
 
 #output {
-  height: 50%;
+  height: 70%;
+  order: 3;
+  overflow: auto  ;
+}
+
+#button {
+  position: relative;
+  height: 50px;
+  width: 150px;
+  order: 4;
+  margin: 0 auto
+}
+
+
+.split-view {
+  display: flex;
+}
+.split-view.vertical{
+  flex-direction: row;
+}
+.split-view.holizontal{
+  flex-direction: column;
+}
+
+
+.afterClicked {
+  position: relative;
+  height: 160%;
+  background-color: rgb(247,240,228);
+  order:  5;
+}
+
+.beforeClicked {
+  display: none;
 }
