エラーメッセージを出す枠をとりあえず作った

--- a/Blockly/src/index.css
+++ b/Blockly/src/index.css
@@ -74,3 +74,16 @@ code {
 .beforeClicked {
   display: none;
 }
+
+.hidden {
+  display:none;
+}
+
+#errorMessage {
+  display: block;
+  order: 6;
+  background-color: #FFA9A9;
+  padding: 20px;
+  color: #EFFDFF;
+  
+}
