--- a/Blockly/src/index.css
+++ b/Blockly/src/index.css
@@ -85,8 +85,10 @@ code {
   background-color: blue;
   opacity:  50%;
   padding: 20px;
-  color: azure;
+  color: white;
   margin: 20px;
+  font-weight: 900;
+  font-size: 20px;
 }
 .errorOccured {
   display: block;
@@ -96,4 +98,6 @@ code {
   opacity: 80%;
   color: white;
   margin: 20px;
+  font-weight: 1000;
+  font-size: 20px;
 }
