生成コード内の関数の定義や変数の宣言の位置を修正

--- a/Blockly/src/index.css
+++ b/Blockly/src/index.css
@@ -36,6 +36,8 @@ code {
 #generatedCode {
   background-color: rgb(247, 240, 228);
   order: 5;
+  user-select: text;
+  cursor: text;
 }
 
 #output {
