--- a/Blockly/src/index.css
+++ b/Blockly/src/index.css
@@ -103,3 +103,26 @@ code {
   font-weight: 1000;
   font-size: 20px;
 }
+
+
+.popup-background{
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  height: 100vh ;
+  width: 100vw ;
+
+  background-color: gray;
+  opacity: 0.5;
+}
+.popup{
+  --height: 300px;
+  --width: 300px;
+  z-index: 100;
+  position: fixed;
+  top: calc(50vh -calc(var(--height)/2));
+  left: calc(50vw -calc(var(--width)/2));
+  height:var(--height);
+  width:var(--width);
+}
