--- a/Blockly/src/index.css
+++ b/Blockly/src/index.css
@@ -81,3 +81,80 @@ code {
   width: fit-content;
   order: 3;
 }
+.hidden {
+  display:none;
+}
+
+.safe {
+  display: block;
+  order: 6;
+  background-color: blue;
+  opacity:  50%;
+  padding: 20px;
+  color: white;
+  margin: 20px;
+  font-weight: 900;
+  font-size: 20px;
+}
+.errorOccured {
+  display: block;
+  order: 6;
+  background-color: red;
+  padding: 20px;
+  opacity: 80%;
+  color: white;
+  margin: 20px;
+  font-weight: 1000;
+  font-size: 20px;
+}
+
+/*
+.popup-background{
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  height: 100vh ;
+  width: 100vw ;
+
+  background-color: gray;
+  opacity: 0.5;
+}
+.popup{
+  --height: 300px;
+  width: 300px;
+  z-index: 100;
+  position: fixed;
+  top: calc(50vh -calc(var(--height)/2));
+  left: calc(50vw -calc(var(--width)/2));
+  height:var(--height);
+  width:var(--width);
+}
+*/
+#popup-outer{
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+#popup-inner{
+  position:absolute;
+  top: 10%;
+  left: 10%;
+  height: 300px;
+  width: 500px;
+}
+
+#close {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  font-size: 32px;
+  font-weight: 800;
+  cursor: pointer;
+  border-radius: 40%;
+  width: 40px;
+  height: 40px;
+}
