--- a/Blockly/src/sandbox/index.css
+++ b/Blockly/src/sandbox/index.css
@@ -3,6 +3,102 @@ body {
   max-width: 100vw;
 }
 
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #333;
+  padding: 5px 0;
+  color: white;
+  z-index: 1000;
+  box-shadow: 0 4px 2px -2px gray;
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.header-logo {
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+}
+
+.nav-links {
+  display: flex;
+  list-style: none;
+  margin: 0;
+}
+
+.nav-links li {
+  margin-left: 20px;
+}
+
+.nav-links li a {
+  color: white;
+  text-decoration: none;
+  font-size: 16px;
+  transition: color 0.3s;
+  cursor: pointer;
+}
+
+.nav-links li a:hover {
+  color: #f1c40f;
+}
+
+/* ハンバーガーメニュー */
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.hamburger span {
+  height: 3px;
+  width: 25px;
+  background: white;
+  margin: 4px 0;
+  transition: 0.4s;
+}
+
+/* レスポンシブ対応 */
+@media (max-width: 768px) {
+  .nav-links {
+      display: none;
+      position: absolute;
+      top: 60px;
+      right: 0;
+      background-color: #333;
+      width: 100%;
+      text-align: right;
+      flex-direction: column;
+  }
+
+  .nav-links li {
+      margin: 10px 0;
+  }
+
+  .hamburger {
+      display: flex;
+  }
+
+  .hamburger.active + .nav-links {
+      display: flex;
+  }
+}
+
 pre,
 code {
   overflow: auto;
@@ -93,6 +189,7 @@ code {
 
 .split-view {
   display: flex;
+  margin-top: 47px;
 }
 .split-view.vertical{
   flex-direction: row;
@@ -225,6 +322,10 @@ code {
   height: 40px;
 }
 
+#popup-close:hover {
+  background-color: #f9f9f9;
+}
+
 #popup-button-container {
   display: flex;
   justify-content: space-evenly;
@@ -238,14 +339,15 @@ code {
   background-color: white;
   color: #007BFF;
   font-size: 20px;
-
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  transition: 0;
 }
 
 .popup-buttons:hover {
   background-color: #e9f3fe;
+  transition: background-color 0.3s;
 }
 
 .popup-buttons.active {
