--- a/Blockly/src/sandbox/index.css
+++ b/Blockly/src/sandbox/index.css
@@ -3,6 +3,7 @@ body {
   max-width: 100vw;
 }
 
+
 header {
   position: fixed;
   top: 0;
@@ -354,6 +355,15 @@ code {
   background-color: #59a2f0; /* 選択中のボタンの背景色 */
   color: #fff; /* 選択中のボタンのテキスト色 */
   border: 2px solid #007BFF; /* 選択中のボタンに枠線を追加 */
+}
+
+.popup-arrow {
+  margin: 0 10px; /* 矢印の左右のマージンを設定 */
+  margin-top: 18px;
+  font-size: 20px; /* 矢印のサイズ */
+  line-height: 1; /* 矢印の行の高さを調整 */
+  color: grey;
+  cursor: default;
 }
 
 #popup-message {
