--- a/Blockly/src/tutorial/spread-sheet/index.css
+++ b/Blockly/src/tutorial/spread-sheet/index.css
@@ -75,7 +75,7 @@ nav {
 }
 
 /* レスポンシブ対応 */
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   .nav-links {
       display: none;
       position: absolute;
@@ -98,7 +98,7 @@ nav {
   .hamburger.active + .nav-links {
       display: flex;
   }
-}
+} */
 
 pre,
 code {
@@ -371,6 +371,8 @@ code {
 
 #popup-message {
   margin-bottom: 20px;
+  overflow: auto;
+  height: 50%;
 }
 
 .popup-slides {
