--- a/Blockly/src/styles/top.css
+++ b/Blockly/src/styles/top.css
@@ -20,6 +20,7 @@ body {
 
 header {
   margin-bottom: 50px;
+  text-align: center;
 }
 
 header h1 {
@@ -32,20 +33,30 @@ header p {
   color: #777;
 }
 
+#about {
+  margin-bottom: 30px;
+}
+
 .content {
   display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  justify-content: center;
   gap: 20px;
+  flex-direction: column;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .card {
   background-color: #fff;
+  margin-left: 30px;
+  margin-right: 30px;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   flex: 1 1 45%;
   min-width: 300px;
+  max-width: 800px;
+  text-align: center;
 }
 
 .card h2 {
@@ -63,19 +74,25 @@ header p {
 .btn {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #007BFF;
-  color: #fff;
+  /* background-color: #007BFF; */
+  text-align: end;
+  color: #6875c0;
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.3s ease;
 }
 
 .btn:hover {
-  background-color: #0056b3;
+  /* background-color: #0056b3; */
+  background-color: #e6e6e6;
 }
 
 footer {
   margin-top: 50px;
-  color: #777;
-  font-size: 0.9rem;
-}
+  background-color: #70a471;
+  color: white;
+  text-align: center;
+  padding: 1em;
+  width: 100%;
+  bottom: 0;
+} 
