--- a/Blockly/src/styles/tutorial.css
+++ b/Blockly/src/styles/tutorial.css
@@ -1,24 +1,125 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f0f0f0;
+  font-family: 'Arial', sans-serif;
+  line-height: 1.6;
+  background-color: #f4f4f4;
+  color: #333;
 }
+
+.content {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
+}
+
 header {
-    background-color: #4CAF50;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+header h1 {
+  font-size: 3rem;
+  color: #333;
+}
+
+header p {
+  font-size: 1.2rem;
+  color: #777;
+}
+
+.group-title {
+    background-color: #65a987;
+    display: inline-block;
     color: white;
-    padding: 1em;
-    text-align: center;
+    padding: 5px 10px;
+    border-radius: 5px 5px 0 0;
+    position: relative;
+    left: calc(50% - 150px); /* groupの幅に基づいて調整 */
 }
-main {
-    padding: 2em;
+
+.group {
+  display: grid;
+  justify-content: center;
+  /* flex-wrap: wrap; */
+  grid-auto-rows: min-content;
+  gap: 20px;
+  padding: 20px;
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #e0ebfa;
+  border-radius: 0 10px 10px 10px;
+  width: 300px;
 }
+
+/* レスポンシブ設定 */
+@media (min-width: 650px) {
+    .group {
+        grid-template-columns: repeat(2, 1fr); /* 画面幅600px以上で2列 */
+        width: 560px;
+    }
+    .group-title {
+        left: calc(50% - 280px); /* groupの幅に基づいて調整 */
+    }
+}
+
+@media (min-width: 900px) {
+    .group {
+        grid-template-columns: repeat(3, 1fr); /* 画面幅900px以上で3列 */
+        width: 840px;
+    }
+    .group-title {
+        left: calc(50% - 420px); /* groupの幅に基づいて調整 */
+    }
+}
+
+.card {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 250px;
+  height: 100px;
+  text-align: left;
+  color: #6875c0;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.card p {
+  font-size: 1rem;
+  color: #666;
+}
+
+.btn {
+  display: block;
+  padding: 10px;
+  /* background-color: #007BFF; */
+  text-align: end;
+  color: #6875c0;
+  text-decoration: none;
+  box-sizing:border-box;
+  width: 100%;
+  height: 100%;
+  /* border-radius: 5px; */
+  transition: background-color 0.3s ease;
+}
+
+.card:hover {
+  /* background-color: #0056b3; */
+  background-color: #e6e6e6;
+}
+
 footer {
-    background-color: #4CAF50;
+    background-color: #70a471;
     color: white;
     text-align: center;
     padding: 1em;
-    position: fixed;
     width: 100%;
     bottom: 0;
-}
+} 
