--- a/Blockly/src/styles/main.css
+++ b/Blockly/src/styles/main.css
@@ -141,7 +141,7 @@ code {
   height: 70%;
   order: 3;
   overflow: auto ;
-  /* border: 2px solid #ccc; */
+  border: 2px solid #ccc;
   padding: 10px;
   margin-bottom: 10px;
 }
