--- a/Blockly/src/styles/main.css
+++ b/Blockly/src/styles/main.css
@@ -1,10 +1,11 @@
 body {
   margin: 0;
-  max-width: 100vw;
+  max-width: 100%;
+  overflow-y: hidden;
 }
 
 
-header {
+/* header {
   position: fixed;
   top: 0;
   left: 0;
@@ -14,15 +15,23 @@ header {
   color: white;
   z-index: 1000;
   box-shadow: 0 4px 2px -2px gray;
-}
+} */
 
 .header-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  background-color: #248f9b;
+  color: white;
+  z-index: 1000;
+  box-shadow: 0 4px 2px -2px gray;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 20px 0 20px;
+  box-sizing: border-box;
 }
 
 .header-logo {
@@ -105,11 +114,33 @@ code {
   overflow: auto;
 }
 
+.split-view {
+  display: flex;
+  margin-top: 47px;
+  height : 100%;
+}
+.split-view.vertical{
+  flex-direction: row;
+}
+.split-view.holizontal{
+  flex-direction: column;
+}
+
 #pageContainer {
   display: flex;
   width: 100%;
-  max-width: 100vw;
-  height: 100vh;
+  max-width: 100%;
+  height: calc(100vh - 40px)
+}
+
+@media (max-width: 1014px) {
+  #pageContainer {
+    height: calc(100vh - 52px)
+  }
+
+  .split-view {
+    margin-top: 67px;
+  }
 }
 
 #blocklyDiv {
@@ -123,7 +154,7 @@ code {
   display: flex;
   flex-direction: column;
   width: 400px;
-  height: 100%;
+  height: 95%;
   flex: 0 0 400px;
   overflow: auto;
   margin: 1rem;
@@ -189,19 +220,6 @@ code {
   order: 4;
   margin: 0 auto
 }
-
-
-.split-view {
-  display: flex;
-  margin-top: 47px;
-}
-.split-view.vertical{
-  flex-direction: row;
-}
-.split-view.holizontal{
-  flex-direction: column;
-}
-
 
 .afterClicked {
   position: relative;
