--- a/Blockly/src/styles/top.css
+++ b/Blockly/src/styles/top.css
@@ -48,9 +48,10 @@ header p {
 
 .card {
   background-color: #fff;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 20px;
+  width: 80%;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   flex: 1 1 45%;
