--- a/Blockly/src/styles/share.css
+++ b/Blockly/src/styles/share.css
@@ -1,19 +1,155 @@
 body {
     font-family: Arial, sans-serif;
+    margin: 0;
+    overflow-x: hidden;
 }
 
 h1 {
     text-align: center;
 }
 
-.content-item {
-    border: 1px solid #ccc;
-    padding: 15px;
-    margin: 10px;
-    border-radius: 5px;
+.btn {
+    display: block;
+    padding: 10px;
+    /* background-color: #007BFF; */
+    text-align: left;
+    color: #6875c0;
+    text-decoration: none;
+    box-sizing:border-box;
+    width: 100%;
+    height: 100%;
+    /* border-radius: 5px; */
+    transition: background-color 0.3s ease;
 }
 
-.content-item img {
-    max-width: 100%;
-    height: auto;
+#contents-list {
+    display: grid;
+    grid-auto-rows: min-content;
+    justify-content: center;
+    gap: 30px;
+    grid-template-columns: repeat(1, 1fr);
+    margin-left: auto;
+    margin-right: auto;
+    padding: 30px;
+    width: 600px;
+    background-color: #e0ebfa;
+    border-radius: 10px;
+    max-height: 3000px;
+    min-height: 300px;
 }
+
+@media (min-width: 1350px) {
+    #contents-list {
+        grid-template-columns: repeat(2, 1fr);
+        width: 1250px;
+    }
+}
+
+@media (max-width: 700px) {
+    #contents-list {
+        width: 90%;
+        overflow: auto;
+        justify-content: left;
+    }
+}
+
+.card {
+    display: flex;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 600px;
+    height: 300px;
+    text-align: left;
+    color: #6875c0;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.card p {
+    font-size: 1rem;
+    color: #666;
+}
+
+/* .card img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    border-radius: 10px 10px 0 0;
+} */
+
+.card:hover {
+    background-color: #f9f9f9;
+    z-index: 100;
+}
+
+.description {
+    padding: 20px;
+}
+
+.images {
+    margin: 20px;
+    object-fit: cover;
+    object-position: 0 0;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    width: 300px;
+    height: 250px;
+}
+
+/* ポップアップのスタイル */
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.popup.hidden {
+    display: none;
+}
+
+.popup-content {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+.popup-content button {
+    margin: 10px;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#confirmButton {
+    background-color: #4CAF50;
+    color: white;
+}
+
+#cancelButton {
+    background-color: #f44336;
+    color: white;
+}
+
+footer {
+    margin-top: 50px;
+    background-color: #70a471;
+    color: white;
+    text-align: center;
+    padding: 1em;
+    bottom: 0;
+} 
