ツールを追加

--- a/frontend/src/styles/top.css
+++ b/frontend/src/styles/top.css
@@ -11,6 +11,57 @@ body {
   color: #333;
 }
 
+.header-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  background-color: #a3d3d7;
+  color: rgb(0, 0, 0);
+  z-index: 1000;
+  box-shadow: 0 4px 2px -2px gray;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px 0 20px;
+  box-sizing: border-box;
+}
+
+.header-logo {
+  font-size: 24px;
+  /* font-weight: bold; */
+  color: black;
+  text-decoration: none;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+}
+
+.nav-links {
+  display: flex;
+  list-style: none;
+  margin: 0;
+}
+
+.nav-links li {
+  margin-left: 20px;
+}
+
+.nav-links li a {
+  color: black;
+  text-decoration: none;
+  font-size: 16px;
+  transition: color 0.3s;
+  cursor: pointer;
+}
+
+.nav-links li a:hover {
+  color: #91823a;
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -44,6 +95,7 @@ header p {
   flex-direction: column;
   padding-left: 20px;
   padding-right: 20px;
+  margin-top: 100px;
 }
 
 .card {
