--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -24,15 +24,22 @@ body {
   left: 0;
   right: 0;
   width: 100%;
-  background-color: #a3d3d7;
+  background-color: #ffffff;
   color: rgb(0, 0, 0);
-  z-index: 1000;
-  box-shadow: 0 4px 2px -2px gray;
+  z-index: 100;
+  /* box-shadow: 0 4px 2px -2px gray; */
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 20px 0 20px;
   box-sizing: border-box;
+  border-bottom:#000000 1px solid;
+}
+
+#header-icon {
+  width: 50px;
+  height: 25px;
+  vertical-align: middle;
 }
 
 .header-logo {
@@ -150,6 +157,7 @@ code {
 
 #outputPane {
   display: flex;
+  position: relative;
   flex-direction: column;
   width: 400px;
   height: 95%;
@@ -161,14 +169,14 @@ code {
 
 #generatedCode {
   background-color: rgb(247, 240, 228);
-  order: 5;
+  /* order: 5; */
   user-select: text;
   cursor: text;
 }
 
 #output {
-  height: 70%;
-  order: 3;
+  height: 90%;
+  /* order: 3; */
   overflow: auto ;
   border: 2px solid #ccc;
   padding: 10px;
@@ -219,26 +227,29 @@ code {
   margin: 0 auto
 } */
 
-.afterClicked {
+#generatedCode {
+  display: none;
   position: relative;
   height: 160%;
   background-color: rgb(247,240,228);
-  order:  5;
+  /* order:  5; */
 }
 
-.beforeClicked {
+/* .beforeClicked {
   display: none;
-}
+} */ 
+ 
 #wstitle{
   background-color: gainsboro;
   width: fit-content;
-  order: 3;
+  /* order: 3; */
 }
+
 .hidden {
   display:none;
 }
 
-.safe {
+/* .safe {
   display: block;
   order: 6;
   background-color: blue;
@@ -259,6 +270,22 @@ code {
   margin: 20px;
   font-weight: 1000;
   font-size: 20px;
+} */
+
+#error-message {
+  display: none;
+  position: absolute;
+  bottom: 10px;
+  left: 5%;
+  width: 80%;
+  padding: 5%;
+  background-color: rgba(255, 96, 96, 0.9);
+  border: rgb(121, 0, 0) 2px solid;
+  border-radius: 5px;
+  color: black;
+  font-weight: 1000;
+  font-size: 20px;
+  z-index: 30;
 }
 
 /*
@@ -305,7 +332,7 @@ code {
   height: 100%;
   width: 100%;
   background: rgba(100,100,100,0.5);
-  z-index: 5000;
+  z-index: 50;
   opacity: 0.5;
 }
 
@@ -316,7 +343,7 @@ code {
   height: 90%;
   width: 90%;
   background-color  : rgba(255, 255, 255, 1);
-  z-index: 10000;
+  z-index: 100;
 }
 
 #popup-title {
@@ -460,35 +487,70 @@ code {
 
 #popup-form {
   display: none;
-  flex-direction: column;
+  /* grid-template-columns: 100px 200px;
+  gap: 10px; */
+  /* flex-direction: column; */
   background-color: white;
-  z-index: 10000;
-  position:absolute;
+  z-index: 100;
+  position: absolute;
   margin-top: 10%;
   margin-left: 25%;
   margin-right: 25%;
   padding: 20px;
-  height: 30%;
+  height: 50%;
   width: 50%;
 }
 
+#content-form {
+  width: 100%; 
+  height: 100%;
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  /* grid-template-rows: 200px 50px; */
+  gap: 0px;
+  padding: 20px;
+}
+
+#content-form > label {
+  grid-column: 1 / 2;
+  /* grid-row: 1 / 2; */
+}
+
+#content-form > input, #content-form > textarea {
+  grid-column: 2 / 3;
+  /* grid-row: 1 / 2; */
+}
+
 #description {
-  field-sizing: content;
-  width: 70%;
-  min-height: 16px;
+  resize: none;
+  height: 50px;  
+}
+
+#submit-button {
+  margin: auto;
+  padding: 10px 15px;
+  background-color: #007BFF;
+  color: white;
+  font-size: 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  grid-column: 1 / 3;
+  /* grid-row: 2 / 3; */
 }
 
 #icon-container {
   display: flex;
-  background-color: rgb(216, 216, 216);
+  background-color: rgba(216, 216, 216, 0.8);
   top: 50px;
   right: 440px;
   padding: 10px;
   width: 110px;
   border-radius: 5px;
-  opacity: 0.8;
+  /* opacity: 0.8; */
   position: absolute;
-  z-index: 1000;
+  z-index: 30;
 }
 
 @media (max-width: 1032px) {
@@ -518,16 +580,23 @@ code {
   transition: background-color 0.4s ease;
 }
 
+#run-icon:active {
+  transform: scale(0.9); /* ボタンを少し縮小 */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* 影を縮小 */
+  background-color: #444; /* 押したときの色 */
+}
+
 /* 各状態のスタイル */
 /* 再生（三角） */
 #run-icon.play::before {
   content: '';
   position: absolute;
+  left: 18px;
   width: 0;
   height: 0;
-  border-left: 12px solid #fff;
-  border-top: 7px solid transparent;
-  border-bottom: 7px solid transparent;
+  border-left: 18px solid #fff;
+  border-top: 9px solid transparent;
+  border-bottom: 9px solid transparent;
 }
 
 /* 停止（縦棒2つ） */
@@ -535,8 +604,8 @@ code {
 #run-icon.stop::after {
   content: '';
   position: absolute;
-  width: 4px;
-  height: 15px;
+  width: 6px;
+  height: 20px;
   background-color: #fff;
 }
 #run-icon.stop::before {
@@ -551,11 +620,12 @@ code {
 #run-icon.continuous::after {
   content: '';
   position: absolute;
+  left: 18px;
   width: 0;
   height: 0;
-  border-left: 10px solid #fff;
-  border-top: 6px solid transparent;
-  border-bottom: 6px solid transparent;
+  border-left: 14px solid #fff;
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
 }
 #run-icon.continuous::before {
   transform: translateX(-8px);
@@ -632,16 +702,16 @@ code {
 }
 
 /* チェックボックスがチェックされた状態 */
-.menu-toggle:checked + .hamburger-icon {
+.menu-toggle:checked + #hamburger-icon {
   transform: rotate(45deg);
 }
 
-.menu-toggle:checked + .hamburger-icon::before {
+.menu-toggle:checked + #hamburger-icon::before {
   transform: rotate(0deg) translateY(0);
 }
 
-.menu-toggle:checked + .hamburger-icon::after {
-  transform: rotate(90deg) translateY(0);
+.menu-toggle:checked + #hamburger-icon::after {
+  transform: rotate(-90deg) translateY(0);
 }
 
 .menu-toggle:checked ~ .menu {
