--- a/frontend/src/styles/share.css
+++ b/frontend/src/styles/share.css
@@ -1,10 +1,71 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    overflow-x: hidden;
+    font-family: 'Arial', sans-serif;
+    line-height: 1.6;
+    background-color: #f4f4f4;
+    color: #333;
+    margin: auto;
+}
+
+.header-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+  z-index: 100;
+  /* box-shadow: 0 4px 2px -2px gray; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px 0 20px;
+  box-sizing: border-box;
+  border-bottom:#000000 1px solid;
+}
+
+#header-icon {
+  width: 50px;
+  height: 25px;
+  vertical-align: middle;
+}
+
+.header-logo {
+  font-size: 24px;
+  /* font-weight: bold; */
+  color: black;
+  text-decoration: none;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+}
+
+.nav-links {
+  display: flex;
+  list-style: none;
+  margin: 0;
+}
+
+.nav-links li {
+  margin-left: 20px;
+}
+
+.nav-links li a {
+  color: black;
+  text-decoration: none;
+  font-size: 16px;
+  transition: color 0.3s;
+  cursor: pointer;
+}
+
+.nav-links li a:hover {
+  color: #725f0c;
 }
 
 h1 {
+    margin-top: 70px;
     text-align: center;
 }
 
