--- a/frontend/src/styles/tutorial.css
+++ b/frontend/src/styles/tutorial.css
@@ -11,11 +11,9 @@ body {
   color: #333;
 }
 
-.content {
+#content {
   max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-  text-align: center;
+  margin-top: 100px;
 }
 
 /* header {
@@ -39,15 +37,22 @@ header p {
   left: 0;
   right: 0;
   width: 100%;
-  background-color: #a3d3d7;
+  background-color: #ffffff;
   color: rgb(0, 0, 0);
-  z-index: 1000;
-  box-shadow: 0 4px 2px -2px gray;
+  z-index: 100;
+  /* box-shadow: 0 4px 2px -2px gray; */
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 20px 0 20px;
   box-sizing: border-box;
+  border-bottom:#000000 1px solid;
+}
+
+#header-icon {
+  width: 50px;
+  height: 25px;
+  vertical-align: middle;
 }
 
 .header-logo {
@@ -81,7 +86,7 @@ nav {
 }
 
 .nav-links li a:hover {
-  color: #91823a;
+  color: #725f0c;
 }
 
 .group-title {
