--- a/frontend/src/styles/top.css
+++ b/frontend/src/styles/top.css
@@ -106,6 +106,9 @@ header p {
 }
 
 .card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #fff;
   margin-left: auto;
   margin-right: auto;
@@ -114,13 +117,17 @@ header p {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   flex: 1 1 45%;
-  min-width: 300px;
+  min-width: 500px;
   max-width: 800px;
   text-align: center;
 }
 
+.card-text{
+  width: 50%;
+}
+
 .card h2 {
-  font-size: 2rem;
+  font-size: 25px;
   color: #444;
   margin-bottom: 15px;
 }
@@ -129,6 +136,29 @@ header p {
   font-size: 1rem;
   color: #666;
   margin-bottom: 20px;
+}
+
+.card img {
+  width: 50%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
+  clip-path: polygon(20% 0, 0 100%, 100% 100%, 100% 0);
+}
+
+/* 擬似要素でボーダーを追加 */
+.card img::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  clip-path: polygon(20% 0, 0 100%, 100% 100%, 100% 0);
+  border: 2px solid #000; /* ボーダーの色と太さ */
+  border-radius: 10px;    /* 元画像と同じ半径を適用 */
+  pointer-events: none;   /* クリックイベントを無効化 */
+  box-sizing: border-box; /* 正確なボーダーサイズを保持 */
 }
 
 .btn {
