--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -350,6 +350,32 @@ code {
   opacity: 0.5;
 }
 
+#popup-sandbox {
+  display: none;
+  position: absolute;
+  top: 30%;
+  left: calc(50% - 200px);
+  height: 150px;
+  width: 400px;
+  background-color  : rgba(255, 255, 255, 1);
+  z-index: 100;
+  border:#000000 1px solid;
+  border-radius: 10px;
+  padding: 20px;
+  align-items: center;
+}
+
+#popup-sandbox-button {
+  padding: 10px 15px;
+  color: white;
+  background-color: #007BFF;
+  font-size: 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0;
+}
+
 #popup-inner{
   position:absolute;
   top: 5%;
@@ -707,6 +733,7 @@ code {
 
 .menu li {
   padding: 3px;
+  font-size: 14px;
   color: #000000;
   text-align: center;
   cursor: pointer;
