--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -6,8 +6,8 @@
 body {
   font-family: 'Arial', sans-serif;
   line-height: 1.6;
-  background-color: #f4f4f4;
-  color: #333;
+  /* background-color: #f4f4f4; */
+  /* color: #333; */
   margin: auto;
   overflow-y: hidden;
 }
@@ -538,34 +538,37 @@ code {
   margin-top: 10%;
   margin-left: 25%;
   margin-right: 25%;
-  padding: 20px;
+  padding: 30px;
   height: 50%;
   width: 50%;
+  min-width: 350px;
 }
 
 #content-form {
   width: 100%; 
   height: 100%;
   display: grid;
-  grid-template-columns: 200px 1fr;
+  grid-template-columns: 170px 1fr;
   /* grid-template-rows: 200px 50px; */
   gap: 0px;
-  padding: 20px;
 }
 
 #content-form > label {
   grid-column: 1 / 2;
   /* grid-row: 1 / 2; */
+  text-align: right;
+  padding-right: 20px;
 }
 
 #content-form > input, #content-form > textarea {
   grid-column: 2 / 3;
+  min-width: 170px;
   /* grid-row: 1 / 2; */
 }
 
 #description {
   resize: none;
-  height: 50px;  
+  height: 70px;  
 }
 
 #submit-button {
