--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -357,14 +357,13 @@ code {
   position: absolute;
   top: 30%;
   left: calc(50% - 200px);
-  height: 150px;
   width: 400px;
   background-color  : rgba(255, 255, 255, 1);
   z-index: 100;
   border:#000000 1px solid;
   border-radius: 10px;
   padding: 20px;
-  align-items: center;
+  text-align: center;
 }
 
 #popup-sandbox-button {
