生成コードを修正　実行用のIdとClassに接頭辞追加

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -186,7 +186,7 @@ code {
 #generatedCode {
   background-color: rgb(247, 240, 228);
   /* order: 5; */
-  user-select: text;
+  user-select: contain;
   cursor: text;
 }
 
