--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -195,6 +195,7 @@ code {
   border: 2px solid #ccc;
   /* padding: 10px; */
   margin-bottom: 10px;
+  padding: 0; 
 }
 
 /* ブラウザによる不要な余白の削除 */
@@ -262,6 +263,8 @@ code {
 #wstitle{
   background-color: gainsboro;
   width: fit-content;
+  padding-left: 2px;
+  padding-right: 2px;
   /* order: 3; */
 }
 
