--- a/frontend/src/styles/top.css
+++ b/frontend/src/styles/top.css
@@ -79,7 +79,7 @@ nav {
 header {
   margin-bottom: 50px;
   text-align: center;
-  position:fixed;
+  /* position:fixed; */
 }
 
 header h1 {
@@ -104,7 +104,7 @@ header p {
   padding-left: 20px;
   padding-right: 20px;
   margin-top: 100px;
-  padding-bottom:100px;
+  /* padding-bottom:100px; */
 }
 
 .card {
@@ -185,7 +185,6 @@ header p {
 }
 
 footer {
-  position:fixed;
   margin-top: 50px;
   background-color: #70a471;
   color: white;
