--- a/frontend/src/styles/tutorial.css
+++ b/frontend/src/styles/tutorial.css
@@ -171,7 +171,7 @@ nav {
 }
 
 footer {
-    position:fixed;
+    /* position:fixed; */
     background-color: #70a471;
     color: white;
     text-align: center;
